Service updated and reformatted